# houseuk-astro

./: .gitignore  .pre-commit-config.yaml  404.html  CHANGELOG.md  Dockerfile  README.md  index.html  mkdocs.yml  objects.inv  pyproject.toml  requirements.txt  secret.yaml
.astro/: config.yaml
.github/workflows/: ci.yml  docs.yml
airflow/: index.html
api/: index.html
api/airbnb_execute/: index.html
api/crime_execute/: index.html
api/extract_utils/: index.html
api/landregistry_execute/: index.html
architecture/: index.html
changelog/: index.html
ci-cd/: index.html
dags/: kube_secrets.py
dags/extract/: crime_extract.py  epc_annual_extract.py  epc_extract.py  insideairbnb_extract.py  landRegistry_extract.py
dags/notification/: slack_notifier_dag.py  test.json
docs/: airflow.md  architecture.md  changelog.md  ci-cd.md  extract.md  index.md  lambda.md  local-development.md  scripts.md
docs/api/: airbnb_execute.md  crime_execute.md  extract_utils.md  index.md  landregistry_execute.md
extract/: README.md  index.html  utils.py
extract/airbnb/: README.md
extract/airbnb/src/: execute.py
extract/crime/: Cargo.toml
extract/crime/current/: README  README.md  execute.py
extract/crime/next/: Cargo.toml
extract/crime/next/src/: README  main.rs
extract/crime/src/: main.rs
extract/epc/: README.md
extract/epc/src/: execute.py
extract/tests/: README.md
include/: airflow_utils.py  kubernetes_helpers.py  logging_config.py
lambda/: index.html  stream_unzip_s3.py
lambda/s3_file_router/: Cargo.toml  README.md
lambda/s3_file_router/src/: event_handler.rs  main.rs
local-development/: index.html
notebooks/exploratory/: rightmove_test.py
scripts/: index.html
search/: search_index.json
tests/airbnb/: test_insideairbnb_execute.py
tests/dags/: test_crime_command_path.py  test_epc_annual_command.py  test_kube_secrets.py  test_landRegistry_extract.py  test_landregistry_command_args.py  test_main.py
tests/epc/: test_execute.py
tests/include/: test_airflow_utils.py
(+3 files in other folders)
