[package]
name = "s3_file_router"
version = "0.1.0"
edition = "2021"

[dependencies]
aws-config = "1.8.14"
aws_lambda_events = { version = "1.0.0", default-features = false, features = ["s3"] }
aws-sdk-ecs = "1.74.0"
aws-sdk-lambda = "1.69.0"
aws-sdk-s3 = "1.79.0"
lambda_runtime = "1.0.1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["macros"] }
urlencoding = "2.1"
