[package]
name = "crime"
version = "0.1.0"
edition = "2024"

[dependencies]
reqwest = { version = "0.11", features = ["stream"] }
tokio = { version = "1", features = ["full"] }
aws-config = "1.1"
aws-sdk-s3 = "1.1"
async_zip = { version = "0.0.17", features = ["full", "tokio"] }
futures-util = "0.3"